@@ -18,6 +18,8 @@
 
 @interface NSInvocation(OCMAdditions)
 
+- (BOOL)hasCharPointerArgument;
+
 - (id)getArgumentAtIndexAsObject:(int)argIndex;
 
 - (NSString *)invocationDescription;
